--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li>CREATE PROFILE</li>
 <li>CREATE REACTIONS</li>
 </ul>
-<p><a href="#" class="button green" target="">SELECT THIS PLAN</a></p></div>
+<p><a href="https://eyowo.me/EYW_4K4ZjYR6DK5uHDN" class="button green" target="">SELECT THIS PLAN</a></p></div>
 	</div>
 
 <div class="col">
@@ -44,7 +44,7 @@
 <li>CREATE PROFILE</li>
 <li>CREATE REACTIONS</li>
 </ul>
-<p><a href="#" class="button blue" target="">SELECT THIS PLAN</a></p></div>
+<p><a href="https://eyowo.me/EYW_ilH2likgXnGeoDe" class="button blue" target="">SELECT THIS PLAN</a></p></div>
 	</div>
 
 <div class="col">
@@ -63,7 +63,7 @@
 <li>CREATE PROFILE</li>
 <li>CREATE REACTIONS</li>
 </ul>
-<p><a href="#" class="button red" target="">SELECT THIS PLAN</a></p></div>
+<p><a href="https://eyowo.me/EYW_akUGRZhWgbaUa3M" class="button red" target="">SELECT THIS PLAN</a></p></div>
 	</div>
 <!-- partial -->
   
